Amal jo varghese UI changed

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -245,7 +245,7 @@
                                 android:layout_weight="1"
                                 android:layout_marginTop="0dp"
                                 android:layout_width="match_parent"
-                                android:layout_height="50dp"
+                                android:layout_height="wrap_content"
                                 android:padding="10dp"
                                 android:text="Emirates ID"
                                 android:textColor="@color/headerfont"
@@ -256,7 +256,7 @@
                                 android:layout_weight="1"
                                 android:layout_marginTop="0dp"
                                 android:layout_width="match_parent"
-                                android:layout_height="50dp"
+                                android:layout_height="wrap_content"
                                 android:padding="10dp"
                                 android:text="Emirates ID"
                                 android:id="@+id/emiratesID"
@@ -273,19 +273,17 @@
                             android:orientation="horizontal">
                             <TextView
                                 android:layout_weight="1"
-                                android:layout_marginTop="10dp"
                                 android:layout_width="match_parent"
-                                android:layout_height="50dp"
+                                android:layout_height="wrap_content"
                                 android:textColor="@color/headerfont"
                                 android:padding="10dp"
                                 android:text="Passport"
                                 />
                             <TextView
                                 android:layout_weight="1"
-                                android:layout_marginTop="10dp"
                                 android:layout_width="match_parent"
                                 android:textColor="@color/headerfont"
-                                android:layout_height="50dp"
+                                android:layout_height="wrap_content"
                                 android:padding="10dp"
                                 android:text="Passport"
                                 android:id="@+id/passprt"
