--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="layoutBG">#c2d0d7</color>
     <color name="ListBG"> #cbcfd2</color>
     <color name="RecyclerBG"> #f2f2f1</color>
-    <color name="LayoutBG"> #EDEFF0</color>
+    <color name="LayoutBG"> #f6f6f6</color>
 
 
 
