--- a/app/src/main/res/layout/activity_home_edit.xml
+++ b/app/src/main/res/layout/activity_home_edit.xml
@@ -377,7 +377,7 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="350dp"
             android:layout_margin="20dp"
             app:cardCornerRadius="10dp">
 
@@ -390,16 +390,19 @@
                     android:text="Find Us Here"
                     android:textStyle="bold"/>
 
-                    <!--<fragment-->
-                    <!--android:layout_below="@+id/find"-->
-                    <!--android:id="@+id/map"-->
-                    <!--android:layout_marginBottom="10dp"-->
-                        <!--android:layout_marginTop="40dp"-->
-                        <!--android:layout_marginLeft="10dp"-->
-                        <!--android:layout_marginRight="10dp"-->
-                    <!--android:name="com.google.android.gms.maps.MapFragment"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent"/>-->
+            <fragment
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/map"
+                android:layout_marginTop="30dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="10dp"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".MapsActivity" />
 
 
 
