Amal jo varghese 28/12/18
.UI changed
.Registrartion(Web Service)
.Added ViewCompany Class,UI
.Form UI updated
.D.O.B employee Spinner adapter setted

--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -112,7 +112,7 @@
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/user_submit"
-                android:textColor="@color/secondary"
+                android:textColor="@android:color/white"
                 android:textStyle="bold"
                 android:text="Submit"
                 android:gravity="center"/>
