--- a/app/src/main/res/layout/activity_add_company_ed.xml
+++ b/app/src/main/res/layout/activity_add_company_ed.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/scrollcmp"
+        android:layout_centerHorizontal="true"
         android:padding="10dp">
 
         <LinearLayout
@@ -64,7 +65,7 @@
                     android:layout_marginTop="20dp"
                     android:id="@+id/cntctpersn"
                     android:layout_below="@id/cmpnyname"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                 <TextView
@@ -366,7 +367,7 @@
                         android:text="Submit"
                         android:textStyle="bold"
                         android:background="@drawable/tvborder2"
-                        android:textColor="@color/secondary"
+                        android:textColor="@android:color/white"
                         android:gravity="center"/>
                 </RelativeLayout>
             </RelativeLayout>
