--- a/app/src/main/res/layout/activity_add_employee_ed.xml
+++ b/app/src/main/res/layout/activity_add_employee_ed.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/scrollcmp"
-        android:padding="10dp">
+        android:padding="5dp">
 
         <LinearLayout
             android:background="@color/LayoutBG"
@@ -211,35 +211,65 @@
                         android:layout_height="wrap_content"
                         >
 
-                        <Spinner
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:layout_weight=".27"
                             android:background="@drawable/spinnerbg"
+                            android:orientation="horizontal">
+
+                        <Spinner
+
+                            android:gravity="center"
                             android:id="@+id/emp_DB_day"
-                            android:layout_margin="5dp"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
-                            android:layout_weight="1">
+                          >
 
                         </Spinner>
 
-                        <Spinner
+                        </RelativeLayout>
+
+
+                        <RelativeLayout
+                            android:layout_marginTop="2dp"
+                            android:layout_marginBottom="2dp"
+                            android:gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight=".26"
                             android:background="@drawable/spinnerbg"
+                            android:orientation="horizontal">
+
+                        <Spinner
                             android:id="@+id/emp_DB_mnth"
-                            android:layout_margin="5dp"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
-                            android:layout_weight="1">
+                            >
 
                         </Spinner>
+                        </RelativeLayout>
+
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:layout_weight=".25"
+                            android:gravity="center"
+                            android:background="@drawable/spinnerbg"
+                            android:orientation="horizontal">
 
                         <Spinner
-                            android:background="@drawable/spinnerbg"
+                            android:gravity="center"
                             android:id="@+id/emp_DB_year"
-                            android:layout_margin="5dp"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
-                            android:layout_weight="1">
+                            >
 
                         </Spinner>
+                        </RelativeLayout>
 
                     </LinearLayout>
 
@@ -366,32 +396,55 @@
                         android:layout_height="wrap_content"
                         >
 
-                        <Spinner
-                            android:background="@drawable/spinnerbg"
-                            android:layout_margin="5dp"
+                        <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="30dp"
-                            android:layout_weight="1">
-
-                        </Spinner>
-
-                        <Spinner
-                            android:background="@drawable/spinnerbg"
+                            android:layout_height="wrap_content"
                             android:layout_margin="5dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="30dp"
-                            android:layout_weight="1">
-
-                        </Spinner>
+                            android:layout_weight="1"
+                            android:background="@drawable/spinnerbg"
+                            android:orientation="horizontal">
 
                         <Spinner
-                            android:background="@drawable/spinnerbg"
-                            android:layout_margin="5dp"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
-                            android:layout_weight="1">
+                            >
 
                         </Spinner>
+                        </RelativeLayout>
+
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/spinnerbg"
+                            android:orientation="horizontal">
+
+                        <Spinner
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                           >
+
+                        </Spinner>
+                        </RelativeLayout>
+
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/spinnerbg"
+                            android:orientation="horizontal">
+
+                        <Spinner
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                            >
+
+                        </Spinner>
+                        </RelativeLayout>
 
                     </LinearLayout>
 
@@ -457,32 +510,57 @@
                         android:layout_height="wrap_content"
                         >
 
-                        <Spinner
-                            android:background="@drawable/spinnerbg"
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_margin="5dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/spinnerbg"
+                            android:orientation="horizontal">
+
+                        <Spinner
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
-                            android:layout_weight="1">
+                           >
+
+                        </Spinner>
+                        </RelativeLayout>
+
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/spinnerbg"
+                            android:orientation="horizontal">
+
+                        <Spinner
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                           >
 
                         </Spinner>
 
-                        <Spinner
-                            android:background="@drawable/spinnerbg"
+                        </RelativeLayout>
+
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_margin="5dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/spinnerbg"
+                            android:orientation="horizontal">
+
+                        <Spinner
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
-                            android:layout_weight="1">
+                            >
 
                         </Spinner>
-
-                        <Spinner
-                            android:background="@drawable/spinnerbg"
-                            android:layout_margin="5dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="30dp"
-                            android:layout_weight="1">
-
-                        </Spinner>
+                        </RelativeLayout>
 
                     </LinearLayout>
 
@@ -515,32 +593,53 @@
                         android:layout_height="wrap_content"
                         >
 
-                        <Spinner
-                            android:background="@drawable/spinnerbg"
-                            android:layout_margin="5dp"
+                        <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="30dp"
-                            android:layout_weight="1">
-
-                        </Spinner>
-
-                        <Spinner
-                            android:background="@drawable/spinnerbg"
+                            android:layout_height="wrap_content"
                             android:layout_margin="5dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="30dp"
-                            android:layout_weight="1">
-
-                        </Spinner>
+                            android:layout_weight="1"
+                            android:background="@drawable/spinnerbg"
+                            android:orientation="horizontal">
 
                         <Spinner
-                            android:background="@drawable/spinnerbg"
-                            android:layout_margin="5dp"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
-                            android:layout_weight="1">
+                            >
 
                         </Spinner>
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/spinnerbg"
+                            android:orientation="horizontal">
+
+                        <Spinner
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                           >
+
+                        </Spinner>
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/spinnerbg"
+                            android:orientation="horizontal">
+
+                        <Spinner
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                           >
+
+                        </Spinner>
+                        </RelativeLayout>
 
                     </LinearLayout>
 
@@ -629,7 +728,7 @@
                         android:text="Submit"
                         android:textStyle="bold"
                         android:background="@drawable/tvborder2"
-                        android:textColor="@color/secondary"
+                        android:textColor="@android:color/white"
                         android:gravity="center"/>
                 </RelativeLayout>
             </RelativeLayout>
