--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -9,19 +9,19 @@
     <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dp"
+    android:padding="30dp"
         android:id="@+id/DashFrame">
 
 
     <android.support.v7.widget.CardView
 
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="70dp"
         android:layout_width="120dp"
         android:layout_height="120dp"
         app:cardCornerRadius="60dp"
         android:padding="10dp"
-        app:cardElevation="10dp"
+        app:cardElevation="6dp"
         >
 
         <android.support.v7.widget.CardView
@@ -48,11 +48,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/DashFrame">
     <TextView
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:padding="10dp"
         android:text="Joan John"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="15dp"
         android:textColor="#926c3e"
         android:textSize="20sp"
         android:textStyle="bold"
