--- a/app/src/main/res/layout/activity_home_edit.xml
+++ b/app/src/main/res/layout/activity_home_edit.xml
@@ -3,9 +3,11 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:fillViewport="true"
-    android:background="@drawable/bgg"
+    android:background="@drawable/bgg2"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -73,11 +75,17 @@
                         android:layout_width="match_parent"
                         android:padding="10dp"
                         android:text="Joan John"
-                        android:layout_marginBottom="15dp"
                         android:textColor="#926c3e"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         android:layout_height="wrap_content" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="username"
+                        android:gravity="center_horizontal"
+                        android:layout_marginBottom="15dp"
+                        />
 
 
                     <LinearLayout
@@ -130,7 +138,7 @@
 
 
         <GridLayout
-            android:padding="25dp"
+            android:padding="20dp"
             android:id="@+id/horizontalScrollView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -145,17 +153,16 @@
                 android:layout_height="100dp"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill_horizontal"
-                android:layout_margin="10dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="5dp">
+                android:layout_margin="5dp"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="2dp">
 
                 <LinearLayout
 
                     android:id="@+id/cmpnylay"
-
+                    android:background="@drawable/buttonborder"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/buttonborder"
                     android:clickable="true"
                     android:orientation="vertical"
                     android:padding="10dp">
@@ -183,18 +190,17 @@
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_columnWeight="1"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:padding="10dp"
-                app:cardBackgroundColor="@color/secondary"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="5dp">
+                app:cardCornerRadius="5dp"
+                app:cardElevation="2dp">
 
 
                 <LinearLayout
                     android:id="@+id/proflay"
+                    android:background="@drawable/buttonborder"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/buttonborder"
                     android:clickable="true"
                     android:orientation="vertical"
 
@@ -225,20 +231,20 @@
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_columnWeight="1"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
+                app:cardCornerRadius="5dp"
                 android:padding="10dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="4dp">
+                app:cardElevation="2dp">
 
 
                 <LinearLayout
                     android:id="@+id/notflay"
+                    android:background="@drawable/buttonborder"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/buttonborder"
                     android:clickable="true"
                     android:orientation="vertical"
-                    android:padding="10dp">
+                    android:padding="8dp">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -265,16 +271,15 @@
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_columnWeight="1"
-                android:layout_margin="10dp"
-                android:padding="10dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="5dp">
+                android:layout_margin="5dp"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="2dp">
 
                 <LinearLayout
+                    android:background="@drawable/buttonborder"
                     android:id="@+id/newslay"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/buttonborder"
                     android:clickable="true"
                     android:orientation="vertical"
                     android:padding="10dp">
@@ -302,17 +307,16 @@
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_columnWeight="1"
-                android:layout_margin="10dp"
-                android:padding="10dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="5dp">
+                android:layout_margin="5dp"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="2dp">
 
 
                 <LinearLayout
+                    android:background="@drawable/buttonborder"
                     android:id="@+id/contactlay"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/buttonborder"
                     android:clickable="true"
                     android:orientation="vertical"
                     android:padding="10dp">
@@ -339,20 +343,19 @@
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_columnWeight="1"
-                android:layout_margin="10dp"
-                android:padding="10dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="5dp">
+                android:layout_margin="5dp"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="2dp">
 
 
                 <LinearLayout
+                    android:background="@drawable/buttonborder"
                     android:id="@+id/renewalrqst"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/buttonborder"
                     android:clickable="true"
                     android:orientation="vertical"
-                    android:padding="10dp">
+                    android:padding="8dp">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -365,7 +368,8 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="30dp"
-                        android:gravity="center"
+                        android:gravity="center_horizontal"
+                        android:textSize="12dp"
                         android:text="Check for Update"
                         android:textStyle="bold" />
 
@@ -378,8 +382,9 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="350dp"
-            android:layout_margin="20dp"
-            app:cardCornerRadius="10dp">
+            android:layout_margin="30dp"
+            app:cardCornerRadius="10dp"
+            app:cardBackgroundColor="@android:color/white">
 
 
 
@@ -394,10 +399,10 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/map"
                 android:layout_marginTop="30dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginEnd="0dp"
+                android:layout_marginRight="0dp"
                 android:layout_marginBottom="10dp"
                 android:name="com.google.android.gms.maps.SupportMapFragment"
                 android:layout_width="match_parent"
