--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,9 +76,11 @@
             android:id="@+id/lay2">
 
             <Button
-                android:layout_width="150dp"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:text="Login"
+                android:textColor="@android:color/white"
+                android:background="@drawable/tvborder2"
                 android:id="@+id/login"
                 android:layout_marginTop="25dp"/>
 
