--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -75,7 +75,7 @@
                     android:padding="10dp"
                     android:layout_below="@+id/cmpname"
                     android:layout_width="300dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:hint="Address"
                     android:id="@+id/addrs"
                     android:layout_marginTop="20dp"
