--- a/app/src/main/res/layout/activity_add_company_ed.xml
+++ b/app/src/main/res/layout/activity_add_company_ed.xml
@@ -35,7 +35,7 @@
                 <LinearLayout
                     android:orientation="vertical"
                     android:id="@+id/cmpnyname"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <TextView
@@ -49,9 +49,11 @@
 
 
                 <EditText
+                    android:id="@+id/Company_Name"
+                    android:focusableInTouchMode="true"
                     android:layout_marginTop="8dp"
                     android:background="@color/gridbg"
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:hint="Company Name"
                     android:padding="10dp"
@@ -78,10 +80,11 @@
                     />
 
                 <EditText
+                    android:id="@+id/Contact_Person"
                     android:layout_marginTop="8dp"
                     android:padding="10dp"
                     android:background="@color/gridbg"
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:hint="Contact Person"
                    />
@@ -96,7 +99,7 @@
                     android:orientation="vertical"
                     android:layout_marginTop="20dp"
                     android:layout_below="@id/cntctpersn"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                 <TextView
@@ -110,10 +113,11 @@
 
 
                 <EditText
+                    android:id="@+id/Trade_Licence"
                     android:padding="10dp"
                     android:layout_marginTop="8dp"
                     android:background="@color/gridbg"
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:hint="Trade Licence"
                     />
@@ -142,35 +146,67 @@
                     />
 
                 <LinearLayout
+
                     android:layout_marginTop="8dp"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                    >
 
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="2dp"
+                        android:layout_weight=".27"
+                        android:background="@drawable/spinnerbg"
+                        android:orientation="horizontal">
+
+
                     <Spinner
-                        android:layout_margin="5dp"
+                        android:id="@+id/TRExp_day"
                         android:layout_width="match_parent"
                         android:layout_height="30dp"
-                        android:layout_weight="1">
+                       >
+
+                    </Spinner>
+                    </RelativeLayout>
+
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="2dp"
+                        android:layout_weight=".26"
+                        android:background="@drawable/spinnerbg"
+                        android:orientation="horizontal">
+
+                    <Spinner
+                        android:id="@+id/TRExp_month"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        >
+
+                    </Spinner>
+                    </RelativeLayout>
+
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="2dp"
+                        android:layout_weight=".25"
+                        android:background="@drawable/spinnerbg"
+                        android:orientation="horizontal">
+
+                    <Spinner
+                        android:id="@+id/TRExp_year"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        >
 
                     </Spinner>
 
-                    <Spinner
-                        android:layout_margin="5dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:layout_weight="1">
-
-                    </Spinner>
-
-                    <Spinner
-                        android:layout_margin="5dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:layout_weight="1">
-
-                    </Spinner>
+                    </RelativeLayout>
 
                 </LinearLayout>
 
@@ -198,10 +234,11 @@
 
 
                 <EditText
+                    android:id="@+id/TRN"
                     android:layout_marginTop="8dp"
                     android:padding="10dp"
                     android:background="@color/gridbg"
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:hint="TRN"/>
 
@@ -228,10 +265,11 @@
                     />
 
                 <EditText
+                    android:id="@+id/Labour_Card_No"
                     android:padding="10dp"
                     android:layout_marginTop="8dp"
                     android:background="@color/gridbg"
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:hint="Labour Card Number"/>
 
@@ -259,10 +297,11 @@
                     />
 
                 <EditText
+                    android:id="@+id/Immigration_Card_no"
                     android:padding="10dp"
                     android:layout_marginTop="8dp"
                     android:background="@color/gridbg"
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:hint="Immigration Card Number"/>
                 </LinearLayout>
@@ -280,7 +319,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="start"
-                    android:text="Immigration Card Number"
+                    android:text="Immigration Card Exp"
                     android:textSize="15dp"
                     android:textColor="@android:color/black"
                     />
@@ -293,29 +332,59 @@
                         android:layout_height="wrap_content"
                         >
 
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:layout_weight=".27"
+                            android:background="@drawable/spinnerbg"
+                            android:orientation="horizontal">
+
                         <Spinner
-                            android:layout_margin="5dp"
+                            android:id="@+id/IMC_Exp_Day"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
-                            android:layout_weight="1">
+                            >
 
                         </Spinner>
 
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:layout_weight=".26"
+                            android:background="@drawable/spinnerbg"
+                            android:orientation="horizontal">
+
                         <Spinner
-                            android:layout_margin="5dp"
+                            android:id="@+id/IMC_Exp_Month"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
-                            android:layout_weight="1">
+                            >
+
+                        </Spinner>
+                        </RelativeLayout>
+
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:layout_weight=".25"
+                            android:background="@drawable/spinnerbg"
+                            android:orientation="horizontal">
+
+                        <Spinner
+                            android:id="@+id/IMC_Exp_Year"
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                            >
 
                         </Spinner>
 
-                        <Spinner
-                            android:layout_margin="5dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="30dp"
-                            android:layout_weight="1">
-
-                        </Spinner>
+                        </RelativeLayout>
 
                     </LinearLayout>
 
@@ -335,17 +404,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="start"
-                    android:text="Immigration Card Number"
+                    android:text="Tenancy"
                     android:textSize="15dp"
                     android:textColor="@android:color/black"
                     />
 
 
                 <EditText
+                    android:id="@+id/Tenancy"
                     android:padding="10dp"
                     android:layout_marginTop="8dp"
                     android:background="@color/gridbg"
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:hint="Tenancy"/>
 
@@ -359,12 +429,14 @@
                     android:layout_centerHorizontal="true"
                     android:layout_height="wrap_content">
 
-                    <Button
+                    <TextView
                         android:layout_margin="10dp"
                         android:layout_width="200dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
                         android:id="@+id/sbmt"
                         android:text="Submit"
+                        android:textSize="18dp"
+                        android:clickable="true"
                         android:textStyle="bold"
                         android:background="@drawable/tvborder2"
                         android:textColor="@android:color/white"
