--- a/app/src/main/res/layout/activity_home_edit.xml
+++ b/app/src/main/res/layout/activity_home_edit.xml
@@ -14,10 +14,13 @@
         android:orientation="vertical"
         android:layout_height="wrap_content">
 
+
+        <!--Profile CardView Starts -->
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp">
+            android:padding="10dp">
 
 
             <android.support.v7.widget.CardView
@@ -58,7 +61,7 @@
                 android:layout_marginRight="5dp"
                 app:cardBackgroundColor="@android:color/white"
                 android:layout_marginTop="140dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="15dp"
                 android:layout_height="170dp"
                 app:cardCornerRadius="10dp"
                 android:padding="10dp"
@@ -104,10 +107,11 @@
                             android:layout_marginEnd="5dp"
                             android:padding="10dp"
                             android:background="@drawable/tvborder"
+
                             android:layout_weight="1"
                             android:gravity="center"
                             android:textStyle="bold"
-                            android:textColor="@color/grid"
+                            android:textColor="@color/TextHead"
                             android:layout_width="match_parent"
                             android:text="Switch Account"
                             android:layout_height="wrap_content" />
@@ -121,7 +125,7 @@
                             android:background="@drawable/tvborder"
                             android:gravity="center"
                             android:textStyle="bold"
-                            android:textColor="@color/grid"
+                            android:textColor="@color/TextHead"
                             android:layout_weight="1"
                             android:layout_width="match_parent"
                             android:text="Dashboard"
@@ -136,9 +140,13 @@
 
         </FrameLayout>
 
+        <!--Profile CardView Ends -->
+
+
+        <!--Menu Icons Grid Starts -->
 
         <GridLayout
-            android:padding="20dp"
+            android:padding="10dp"
             android:id="@+id/horizontalScrollView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -160,7 +168,6 @@
                 <LinearLayout
 
                     android:id="@+id/cmpnylay"
-                    android:background="@drawable/buttonborder"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:clickable="true"
@@ -198,7 +205,6 @@
 
                 <LinearLayout
                     android:id="@+id/proflay"
-                    android:background="@drawable/buttonborder"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:clickable="true"
@@ -239,7 +245,6 @@
 
                 <LinearLayout
                     android:id="@+id/notflay"
-                    android:background="@drawable/buttonborder"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:clickable="true"
@@ -276,7 +281,6 @@
                 app:cardElevation="2dp">
 
                 <LinearLayout
-                    android:background="@drawable/buttonborder"
                     android:id="@+id/newslay"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -313,7 +317,6 @@
 
 
                 <LinearLayout
-                    android:background="@drawable/buttonborder"
                     android:id="@+id/contactlay"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -349,7 +352,6 @@
 
 
                 <LinearLayout
-                    android:background="@drawable/buttonborder"
                     android:id="@+id/renewalrqst"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -379,6 +381,353 @@
 
         </GridLayout>
 
+        <!--Menu Icons Grid Ends -->
+
+
+
+        <!--Our services   Horizontal scrollview start-->
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Our Services"
+            android:textColor="#293f55"
+            android:paddingLeft="10dp"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:layout_margin="10dp"/>
+
+
+        <HorizontalScrollView
+            android:id="@+id/horizontalScrollView2"
+            android:layout_width="match_parent"
+            android:layout_height="275dp"
+            android:scrollbars="none">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:padding="10dp"
+                android:id="@+id/shapeLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="200dp"
+                    android:layout_margin="5dp"
+                    app:cardCornerRadius="10dp"
+                    android:layout_height="match_parent"
+                    app:cardElevation="5dp">
+                    <LinearLayout
+
+
+                        android:layout_width="match_parent"
+                        android:orientation="vertical"
+                        android:padding="10dp"
+                        android:id="@+id/fstlay"
+                        android:clickable="true"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:padding="5dp"
+                            android:layout_gravity="center_horizontal"
+                            android:src="@drawable/deal"
+
+
+                            android:scaleType="centerCrop"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp" />
+
+                        <TextView
+                            android:gravity="center"
+                            android:layout_width="match_parent"
+                            android:text="Sponsorship arrangements"
+                            android:textSize="13dp"
+                            android:textStyle="bold"
+                            android:layout_height="35dp" />
+
+                        <TextView
+                            android:layout_gravity="center"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="9dp"
+                            android:text="@string/sponsorship"/>
+
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="200dp"
+                    android:padding="10dp"
+                    android:layout_margin="5dp"
+                    app:cardCornerRadius="10dp"
+                    android:layout_height="match_parent"
+
+                    app:cardElevation="5dp">
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:padding="10dp"
+
+                        android:orientation="vertical"
+                        android:id="@+id/seclay"
+                        android:clickable="true"
+
+
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:padding="5dp"
+                            android:layout_gravity="center_horizontal"
+                            android:src="@drawable/support"
+
+
+                            android:scaleType="centerCrop"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp" />
+
+                        <TextView
+                            android:gravity="center"
+                            android:layout_width="match_parent"
+                            android:text="Pro services"
+                            android:textSize="13dp"
+                            android:textStyle="bold"
+                            android:id="@+id/protext"
+                            android:layout_height="35dp" />
+
+                        <TextView
+
+                            android:layout_gravity="center"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="9dp"
+                            android:text="@string/services"/>
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="200dp"
+                    android:padding="10dp"
+                    android:layout_margin="5dp"
+                    android:layout_height="match_parent"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="4dp">
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="vertical"
+                        android:padding="10dp"
+
+                        android:id="@+id/lay8"
+                        android:clickable="true"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:padding="5dp"
+                            android:layout_gravity="center_horizontal"
+
+                            android:src="@drawable/union"
+
+
+                            android:scaleType="centerCrop"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp" />
+
+
+                        <TextView
+                            android:gravity="center"
+                            android:layout_width="match_parent"
+                            android:text="Labour bank guarantee"
+                            android:textSize="13dp"
+                            android:id="@+id/labrtxt"
+                            android:textStyle="bold"
+                            android:layout_height="40dp" />
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_below="@+id/labrtxt"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:layout_gravity="center"
+
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textSize="9dp"
+                                android:text="@string/labour"
+                                />
+
+                        </RelativeLayout>
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="200dp"
+                    android:padding="5dp"
+                    android:layout_margin="5dp"
+                    app:cardCornerRadius="10dp"
+                    android:layout_height="match_parent"
+                    app:cardElevation="5dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="vertical"
+                        android:padding="10dp"
+
+
+                        android:clickable="true"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:padding="5dp"
+                            android:layout_gravity="center_horizontal"
+                            android:src="@drawable/contract"
+
+
+                            android:scaleType="centerCrop"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp" />
+
+
+                        <TextView
+                            android:gravity="center"
+                            android:layout_width="match_parent"
+                            android:text="Legal document clearing through online application"
+                            android:textSize="13dp"
+                            android:id="@+id/legaltxt"
+                            android:textStyle="bold"
+                            android:layout_height="40dp" />
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/legaltxt">
+
+                            <TextView
+                                android:layout_gravity="center"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textSize="9dp"
+                                android:text="@string/legaldocument"
+                                 />
+
+                        </RelativeLayout>
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="200dp"
+                    android:padding="10dp"
+                    android:layout_margin="5dp"
+                    app:cardCornerRadius="10dp"
+                    android:layout_height="match_parent"
+                    app:cardElevation="5dp">
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="vertical"
+                        android:padding="10dp"
+
+
+                        android:clickable="true"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:padding="5dp"
+                            android:layout_gravity="center_horizontal"
+                            android:src="@drawable/family"
+
+                            android:scaleType="centerCrop"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp" />
+
+                        <TextView
+                            android:gravity="center"
+                            android:layout_width="match_parent"
+                            android:text="Family visa"
+                            android:textSize="13dp"
+                            android:textStyle="bold"
+                            android:layout_height="35dp" />
+
+                        <TextView
+                            android:layout_gravity="center"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="9dp"
+                            android:text="@string/family"/>
+
+
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="200dp"
+                    android:padding="10dp"
+                    android:layout_margin="5dp"
+                    app:cardCornerRadius="10dp"
+                    android:layout_height="match_parent"
+                    app:cardElevation="5dp">
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="vertical"
+                        android:padding="10dp"
+                        android:id="@+id/lay7"
+
+                        android:clickable="true"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:padding="5dp"
+                            android:layout_gravity="center_horizontal"
+                            android:src="@drawable/accountant"
+                            android:scaleType="centerCrop"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp" />
+
+                        <TextView
+                            android:gravity="center"
+                            android:layout_width="match_parent"
+                            android:text="Accounting and bookkeeping services"
+                            android:textSize="13dp"
+                            android:textStyle="bold"
+                            android:layout_height="35dp" />
+
+                        <TextView
+                            android:layout_gravity="center"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="9dp"
+                            android:text="@string/account"/>
+
+
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+
+
+            </LinearLayout>
+
+
+        </HorizontalScrollView>
+
+        <!--Our services   Horizontal scrollview End -->
+
+
+
+        <!--Map Fragment Start -->
+
+
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="350dp"
@@ -392,13 +741,14 @@
                     android:layout_margin="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@android:color/black"
                     android:text="Find Us Here"
                     android:textStyle="bold"/>
 
             <fragment
                 xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/map"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginStart="0dp"
                 android:layout_marginLeft="0dp"
                 android:layout_marginEnd="0dp"
@@ -412,6 +762,9 @@
 
 
         </android.support.v7.widget.CardView>
+
+
+        <!--Map Fragment End -->
 
 
 
