--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,7 +22,6 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
         <TextView
             android:id="@+id/appname"
-
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
@@ -61,6 +60,9 @@
 
 
                 <EditText
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:imeOptions="actionDone"
                     android:padding="10dp"
                     android:layout_width="300dp"
                     android:layout_height="50dp"
@@ -72,6 +74,7 @@
                     />
 
                 <EditText
+                    android:imeOptions="actionDone"
                     android:padding="10dp"
                     android:layout_below="@+id/cmpname"
                     android:layout_width="300dp"
@@ -82,6 +85,7 @@
                     android:background="@color/gridbg"
                     />
                 <EditText
+                    android:imeOptions="actionDone"
                     android:padding="10dp"
                     android:layout_width="300dp"
                     android:layout_height="50dp"
@@ -92,6 +96,7 @@
                     android:background="@color/gridbg"
                     />
                 <EditText
+                    android:imeOptions="actionDone"
                     android:padding="10dp"
                     android:layout_width="300dp"
                     android:layout_height="50dp"
@@ -102,6 +107,7 @@
                     android:background="@color/gridbg"
                     />
                 <EditText
+                    android:imeOptions="actionDone"
                     android:padding="10dp"
                     android:layout_width="300dp"
                     android:layout_height="50dp"
@@ -112,6 +118,7 @@
                     android:background="@color/gridbg"
                     />
                 <EditText
+                    android:imeOptions="actionDone"
                     android:padding="10dp"
                     android:layout_width="300dp"
                     android:layout_height="50dp"
@@ -124,9 +131,11 @@
 
 
                 <EditText
+                    android:imeOptions="actionDone"
                     android:padding="10dp"
                     android:layout_width="300dp"
                     android:layout_height="50dp"
+                    android:inputType="textPassword"
                     android:hint="Password"
                     android:id="@+id/paswd"
                     android:layout_marginTop="20dp"
@@ -134,6 +143,8 @@
                     android:background="@color/gridbg"
                     />
                 <EditText
+                    android:inputType="textPassword"
+                    android:imeOptions="actionDone"
                     android:padding="10dp"
                     android:layout_width="300dp"
                     android:layout_height="50dp"
@@ -155,9 +166,12 @@
                 android:gravity="center"
                 >
 
-                <Button
-                    android:layout_width="170dp"
-                    android:layout_height="wrap_content"
+                <TextView
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:clickable="true"
+                    android:textSize="20dp"
+                    android:gravity="center"
                     android:id="@+id/regbtn"
                     android:textColor="@android:color/white"
                     android:background="@drawable/tvborder2"
