--- a/app/src/main/res/layout/activity_view_company.xml
+++ b/app/src/main/res/layout/activity_view_company.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/RecyclerBG"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".UserFragment"
+    tools:context=".ViewCompanyActivity"
     android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
