--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -66,7 +66,8 @@
                     android:padding="10dp"
                     android:layout_width="300dp"
                     android:layout_height="50dp"
-                    android:hint="Owner Name"
+                    android:textColorHint="@color/hint"
+                    android:hint="* Owner Name"
                     android:id="@+id/OwnerName"
                     android:layout_marginTop="20dp"
                     android:background="@color/gridbg"
@@ -100,6 +101,7 @@
                     android:padding="10dp"
                     android:layout_width="300dp"
                     android:layout_height="50dp"
+                    android:inputType="number"
                     android:hint="Contact Number"
                     android:id="@+id/contactno"
                     android:layout_marginTop="20dp"
@@ -111,18 +113,22 @@
                     android:padding="10dp"
                     android:layout_width="300dp"
                     android:layout_height="50dp"
-                    android:hint="User Name"
+                    android:textColorHint="@color/hint"
+                    android:hint="* User Name"
                     android:id="@+id/uname"
                     android:layout_marginTop="20dp"
                     android:layout_below="@+id/contactno"
                     android:background="@color/gridbg"
                     />
+
+
                 <EditText
                     android:imeOptions="actionDone"
                     android:padding="10dp"
                     android:layout_width="300dp"
                     android:layout_height="50dp"
-                    android:hint="Company Name"
+                    android:hint="* Company Name"
+                    android:textColorHint="@color/hint"
                     android:id="@+id/cmpname"
                     android:layout_marginTop="20dp"
                     android:layout_below="@+id/OwnerName"
@@ -136,7 +142,8 @@
                     android:layout_width="300dp"
                     android:layout_height="50dp"
                     android:inputType="textPassword"
-                    android:hint="Password"
+                    android:textColorHint="@color/hint"
+                    android:hint="* Password"
                     android:id="@+id/paswd"
                     android:layout_marginTop="20dp"
                     android:layout_below="@+id/uname"
