--- a/app/src/main/res/layout/activity_add_employee_ed.xml
+++ b/app/src/main/res/layout/activity_add_employee_ed.xml
@@ -49,6 +49,7 @@
 
 
                     <EditText
+                        android:id="@+id/emp_comp"
                         android:focusableInTouchMode="true"
                         android:layout_marginTop="8dp"
                         android:padding="10dp"
@@ -79,6 +80,7 @@
                     />
 
                     <EditText
+                        android:id="@+id/emp_name"
                         android:layout_marginTop="8dp"
                         android:padding="10dp"
                         android:background="@color/gridbg"
@@ -91,41 +93,13 @@
                 </LinearLayout>
 
 
-                <LinearLayout
-
-                    android:id="@+id/empid"
-                    android:orientation="vertical"
-                    android:layout_marginTop="20dp"
-                    android:layout_below="@id/empname"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:text="Employee ID"
-                    android:textSize="15dp"
-                    android:textColor="@android:color/black"
-                    />
-
-
-                    <EditText
-                        android:padding="10dp"
-                        android:background="@color/gridbg"
-                        android:layout_marginTop="8dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:hint="Employee ID"/>
-
-                </LinearLayout>
 
 
 
                 <LinearLayout
 
                     android:id="@+id/emp_addrss"
-                    android:layout_below="@+id/empid"
+                    android:layout_below="@+id/empname"
 
                     android:orientation="vertical"
                     android:layout_marginTop="20dp"
@@ -142,12 +116,12 @@
                     />
 
                     <EditText
-
+                        android:id="@+id/empAddress"
                         android:padding="10dp"
                         android:background="@color/gridbg"
                         android:layout_marginTop="8dp"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="wrap_content"
                         android:hint="Address"/>
 
                 </LinearLayout>
@@ -173,7 +147,7 @@
                     />
 
                     <EditText
-
+                        android:id="@+id/empPh"
                         android:padding="10dp"
                         android:background="@color/gridbg"
                         android:layout_marginTop="8dp"
@@ -299,6 +273,7 @@
                     />
 
                     <EditText
+                        android:id="@+id/empEmail"
                         android:padding="10dp"
                         android:background="@color/gridbg"
                         android:layout_marginTop="8dp"
@@ -328,6 +303,7 @@
 
 
                     <EditText
+                        android:id="@+id/empEMID"
                         android:padding="10dp"
                         android:background="@color/gridbg"
                         android:layout_marginTop="8dp"
@@ -359,6 +335,7 @@
 
 
                     <EditText
+                        android:id="@+id/empPasspotNO"
                         android:padding="10dp"
                         android:layout_marginTop="8dp"
                         android:layout_width="match_parent"
@@ -406,6 +383,7 @@
                             android:orientation="horizontal">
 
                         <Spinner
+                            android:id="@+id/pExp_Day"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
                             >
@@ -423,6 +401,7 @@
                             android:orientation="horizontal">
 
                         <Spinner
+                            android:id="@+id/pExp_Month"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
                            >
@@ -440,6 +419,7 @@
                             android:orientation="horizontal">
 
                         <Spinner
+                            android:id="@+id/pExp_Year"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
                             >
@@ -473,6 +453,7 @@
 
 
                     <EditText
+                        android:id="@+id/EMPWorkPermit"
                         android:padding="10dp"
                         android:layout_marginTop="8dp"
                         android:background="@color/gridbg"
@@ -521,6 +502,7 @@
                             android:orientation="horizontal">
 
                         <Spinner
+                            android:id="@+id/wpExp_Day"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
                            >
@@ -538,6 +520,7 @@
                             android:orientation="horizontal">
 
                         <Spinner
+                            android:id="@+id/wpExp_Month"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
                            >
@@ -556,6 +539,7 @@
                             android:orientation="horizontal">
 
                         <Spinner
+                            android:id="@+id/wpExp_Year"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
                             >
@@ -603,6 +587,7 @@
                             android:orientation="horizontal">
 
                         <Spinner
+                            android:id="@+id/vExp_Day"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
                             >
@@ -619,6 +604,7 @@
                             android:orientation="horizontal">
 
                         <Spinner
+                            android:id="@+id/vExp_Month"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
                            >
@@ -635,6 +621,7 @@
                             android:orientation="horizontal">
 
                         <Spinner
+                            android:id="@+id/vExp_Year"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
                            >
@@ -669,6 +656,7 @@
 
 
                     <EditText
+                        android:id="@+id/UIDno"
                         android:padding="10dp"
                         android:layout_marginTop="8dp"
                         android:background="@color/gridbg"
@@ -699,6 +687,7 @@
 
 
                     <EditText
+                        android:id="@+id/FileNo"
                         android:padding="10dp"
                         android:layout_marginTop="8dp"
                         android:layout_width="match_parent"
@@ -726,7 +715,7 @@
                         android:layout_width="200dp"
                         android:layout_height="50dp"
                         android:clickable="true"
-                        android:id="@+id/sbmt"
+                        android:id="@+id/sbmtEMP"
                         android:text="Submit"
                         android:textSize="18dp"
                         android:textStyle="bold"
