--- a/app/src/main/res/layout/companylist.xml
+++ b/app/src/main/res/layout/companylist.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
@@ -13,6 +13,7 @@
         android:clickable="true"
         android:layout_margin="8dp">
         <LinearLayout
+            android:id="@+id/context"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="20dp"
@@ -45,6 +46,7 @@
                     android:layout_marginStart="20dp">
 
                 <TextView
+                    android:id="@+id/CompListName"
                     android:layout_gravity="center_horizontal"
 
                     android:textSize="20dp"
@@ -55,6 +57,7 @@
                     android:text="Company Name"/>
 
                     <TextView
+                        android:id="@+id/CompListOwner"
                         android:layout_marginTop="10dp"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="wrap_content"
@@ -69,24 +72,6 @@
         </LinearLayout>
 
 </android.support.v7.widget.CardView>
-    <FrameLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="20dp"
-        android:backgroundTint="@color/secondary"
-        android:src="@drawable/addlist"
-        app:elevation="6dp"
-        app:pressedTranslationZ="12dp" />
-    </FrameLayout>
 
 
 </LinearLayout>
