--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#931623</color>
     <color name="colorAccent">#3d4350</color>
     <color name="toolbar">#bf1e2e</color>
+    <color name="hint">#AAbf1e2e</color>
     <color name="secondary">#c49a6a</color>
     <color name="grid">#666666</color>
     <color name="gridbg">#32666666</color>
