Amal jo varghese 4/1/19
.Coding Validation on RegActivity(Completed)

--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -45,7 +45,8 @@
             android:layout_below="@+id/name_of_user"/>
 
 
-        <TextView
+        <EditText
+
             android:padding="10dp"
             android:textSize="18dp"
             android:background="@color/gridbg"
