--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -66,8 +66,7 @@
                     android:padding="10dp"
                     android:layout_width="300dp"
                     android:layout_height="50dp"
-                    android:textColorHint="@color/hint"
-                    android:hint="* Owner Name"
+                    android:hint="Owner Name"
                     android:id="@+id/OwnerName"
                     android:layout_marginTop="20dp"
                     android:background="@color/gridbg"
@@ -113,8 +112,7 @@
                     android:padding="10dp"
                     android:layout_width="300dp"
                     android:layout_height="50dp"
-                    android:textColorHint="@color/hint"
-                    android:hint="* User Name"
+                    android:hint="User Name"
                     android:id="@+id/uname"
                     android:layout_marginTop="20dp"
                     android:layout_below="@+id/contactno"
@@ -127,8 +125,7 @@
                     android:padding="10dp"
                     android:layout_width="300dp"
                     android:layout_height="50dp"
-                    android:hint="* Company Name"
-                    android:textColorHint="@color/hint"
+                    android:hint="Company Name"
                     android:id="@+id/cmpname"
                     android:layout_marginTop="20dp"
                     android:layout_below="@+id/OwnerName"
@@ -142,8 +139,7 @@
                     android:layout_width="300dp"
                     android:layout_height="50dp"
                     android:inputType="textPassword"
-                    android:textColorHint="@color/hint"
-                    android:hint="* Password"
+                    android:hint="Password"
                     android:id="@+id/paswd"
                     android:layout_marginTop="20dp"
                     android:layout_below="@+id/uname"
