--- a/app/src/main/res/layout/activity_add_employee_ed.xml
+++ b/app/src/main/res/layout/activity_add_employee_ed.xml
@@ -377,8 +377,8 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="5dp"
-                            android:layout_weight="1"
+                            android:layout_margin="2dp"
+                            android:layout_weight=".27"
                             android:background="@drawable/spinnerbg"
                             android:orientation="horizontal">
 
@@ -395,8 +395,8 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="5dp"
-                            android:layout_weight="1"
+                            android:layout_margin="2dp"
+                            android:layout_weight=".26"
                             android:background="@drawable/spinnerbg"
                             android:orientation="horizontal">
 
@@ -413,8 +413,8 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="5dp"
-                            android:layout_weight="1"
+                            android:layout_margin="2dp"
+                            android:layout_weight=".25"
                             android:background="@drawable/spinnerbg"
                             android:orientation="horizontal">
 
@@ -496,8 +496,8 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="5dp"
-                            android:layout_weight="1"
+                            android:layout_margin="2dp"
+                            android:layout_weight=".27"
                             android:background="@drawable/spinnerbg"
                             android:orientation="horizontal">
 
@@ -514,8 +514,8 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="5dp"
-                            android:layout_weight="1"
+                            android:layout_margin="2dp"
+                            android:layout_weight=".26"
                             android:background="@drawable/spinnerbg"
                             android:orientation="horizontal">
 
@@ -533,8 +533,8 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="5dp"
-                            android:layout_weight="1"
+                            android:layout_margin="2dp"
+                            android:layout_weight=".25"
                             android:background="@drawable/spinnerbg"
                             android:orientation="horizontal">
 
@@ -581,8 +581,8 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="5dp"
-                            android:layout_weight="1"
+                            android:layout_margin="2dp"
+                            android:layout_weight=".27"
                             android:background="@drawable/spinnerbg"
                             android:orientation="horizontal">
 
@@ -598,8 +598,8 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="5dp"
-                            android:layout_weight="1"
+                            android:layout_margin="2dp"
+                            android:layout_weight=".26"
                             android:background="@drawable/spinnerbg"
                             android:orientation="horizontal">
 
@@ -615,8 +615,8 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="5dp"
-                            android:layout_weight="1"
+                            android:layout_margin="2dp"
+                            android:layout_weight=".25"
                             android:background="@drawable/spinnerbg"
                             android:orientation="horizontal">
 
