--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,11 +77,14 @@
         >
 
 
-
+        <android.support.design.widget.TextInputLayout
+            android:layout_marginTop="20dp"
+            android:id="@+id/username1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
         <EditText
             android:focusableInTouchMode="true"
-            android:layout_marginTop="20dp"
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:hint="User Name"
@@ -89,17 +92,27 @@
             android:id="@+id/username"
             android:background="@color/gridbg"
             />
-        <EditText
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_marginTop="25dp"
+            android:layout_below="@+id/username1"
+            android:id="@+id/password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true"
+            >
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/pasword"
             android:imeOptions="actionDone"
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:padding="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_below="@+id/username"
-            android:id="@+id/password"
             android:inputType="textPassword"
             android:hint="Password"
             android:background="@color/gridbg"/>
+
+        </android.support.design.widget.TextInputLayout>
         <RelativeLayout
             android:layout_below="@+id/password"
             android:layout_width="wrap_content"
