--- a/app/src/main/res/layout/activity_view_company.xml
+++ b/app/src/main/res/layout/activity_view_company.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/RecyclerBG"
+    android:background="#40c49a6a"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ViewCompanyActivity"
     android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
 
     <android.support.v7.widget.RecyclerView
 
