--- a/app/src/main/res/layout/companylist.xml
+++ b/app/src/main/res/layout/companylist.xml
@@ -8,48 +8,56 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="8dp"
+        app:cardElevation="4dp"
         android:id="@+id/list"
         android:clickable="true"
-        android:layout_margin="8dp">
+        android:layout_margin="5dp">
         <LinearLayout
             android:id="@+id/context"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="20dp"
             >
             <LinearLayout
+                android:orientation="horizontal"
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 >
+
                 <android.support.v7.widget.CardView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:id="@+id/img1"
+                    android:layout_margin="5dp"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+
                     android:shape="ring"
-                    app:cardCornerRadius="50dp">
-                    <ImageView
+                    app:cardCornerRadius="40dp">
+                    <TextView
+                        android:layout_gravity="center"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="true"
-                        android:src="@drawable/family"
-                        android:scaleType="fitXY"
+                        android:gravity="center"
+                        android:textSize="30sp"
+                        android:textStyle="bold"
+                        android:textColor="@android:color/white"
                         android:id="@+id/img"
                         />
                 </android.support.v7.widget.CardView>
 
                 <LinearLayout
+                    android:layout_gravity="center_horizontal"
                     android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="20dp"
                     android:layout_marginStart="20dp">
 
                 <TextView
                     android:id="@+id/CompListName"
-                    android:layout_gravity="center_horizontal"
+                    android:layout_gravity="start"
 
-                    android:textSize="20dp"
+                    android:textSize="25dp"
                     android:textColor="@color/TextHead"
                     android:textStyle="bold"
                     android:layout_width="wrap_content"
@@ -59,15 +67,62 @@
                     <TextView
                         android:id="@+id/CompListOwner"
                         android:layout_marginTop="10dp"
-                        android:layout_gravity="center_horizontal"
+                        android:layout_gravity="start"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Owner Name"/>
 
+                        <RelativeLayout
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_marginBottom="5dp"
+                            android:id="@+id/count"
+                            android:layout_alignParentBottom="true"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:src="@drawable/emp"
+                            />
+
+                            <TextView
+                                android:id="@+id/empcount"
+                                android:layout_toEndOf="@+id/count"
+                                android:layout_toRightOf="@+id/count"
+                               android:layout_alignParentBottom="true"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="10dp"
+                                android:layout_marginStart="10dp"
+                                android:textSize="20dp"
+                                android:textColor="@color/indication"
+                                android:gravity="bottom"
+                                />
+
+
+                            <ImageView
+                                android:clickable="true"
+                                android:layout_marginBottom="5dp"
+                                android:id="@+id/delete"
+                                android:layout_alignParentBottom="true"
+                                android:layout_alignParentEnd="true"
+                                android:layout_alignParentRight="true"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:src="@drawable/delete"
+                                />
+
+                        </RelativeLayout>
+
+
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
-            </LinearLayout>
+
 
         </LinearLayout>
 
